<resources>
    <string name="app_name">MealTracker</string>
    <string name="add_meal">Add Meal</string>
    <string name="favourites">Favourites</string>
    <string name="tracking">Tracking</string>
    <string name="back_button">Back</string>
    <string name="menu_button">Menu</string>
    <string name="home">Home</string>
    <string name="meals">Meals</string>
    <string name="meal_name">Meal name</string>
    <string name="calories">Calories</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="date">Date</string>
    <string name="edit_meal">Edit Meal</string>
    <string name="no_meals_description">No Meals are stored. Click to add new meals!</string>
    <string name="save_action">Save</string>
    <string name="meal_desc_req">Description required</string>
    <string name="calories_req">Calories required</string>
    <string name="meal_name_req">Name required</string>
    <string name="required_fields">Required</string>
    <string name="edit_item_title">Edit</string>
    <string name="delete">Delete</string>
    <string name="meal">Meal</string>
    <string name="name">Name</string>
    <string name="attention">Attention</string>
    <string name="delete_question">Are you sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="details_meal">Details</string>
    <string name="no_favourite_meals_description">No favourite Meals!</string>
    <string name="no_tracked_meals_description">No tracked meals for this date!</string>
    <string name="delete_item">Delete Meal</string>
    <string name="date_added">Date Added</string>
    <string name="search_bar_meal">Search for a meal...</string>
    <string name="search_icon">Search Icon</string>
    <string name="meal_image">Meal Image</string>
    <string name="add_meal_tracked">Add Meal to Tracked</string>
    <string name="select_date">Select Date...</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="total_calories">"Total Calories: "</string>
    <string name="select_meal_track">"Select meal to track: "</string>
    <string name="tracking_remove">Remove from tracking</string>
    <string name="toggle_favourite">Toggle Favourite</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="add_photo">Add a photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="camera_grant_permission">Please grant camera permissions</string>
</resources>